[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/components/login_panel.gd" type="Script" id=1]

[node name="LoginPanel" type="VBoxContainer"]
margin_right = 374.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_top = 20.0
margin_right = 374.0
margin_bottom = 48.0
text = "Login:"

[node name="Username" type="HBoxContainer" parent="."]
margin_top = 68.0
margin_right = 374.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="Username"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 33.0
rect_min_size = Vector2( 130, 0 )
text = "Username: "

[node name="UsernameInput" type="LineEdit" parent="Username"]
unique_name_in_owner = true
margin_left = 150.0
margin_right = 374.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Password" type="HBoxContainer" parent="."]
margin_top = 126.0
margin_right = 374.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="Password"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 33.0
rect_min_size = Vector2( 130, 0 )
text = "Password: "

[node name="PasswordInput" type="LineEdit" parent="Password"]
unique_name_in_owner = true
margin_left = 150.0
margin_right = 374.0
margin_bottom = 38.0
size_flags_horizontal = 3
secret = true

[node name="Notification" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 184.0
margin_right = 374.0
margin_bottom = 212.0

[node name="Login" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 232.0
margin_right = 374.0
margin_bottom = 266.0
size_flags_horizontal = 3
text = "Login"

[node name="Back" type="Button" parent="."]
margin_top = 286.0
margin_right = 374.0
margin_bottom = 320.0
size_flags_horizontal = 3
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
